<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_white_48dp"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/reportABug"
        android:icon="@drawable/ic_bug_report_black_48dp"
        android:orderInCategory="100"
        android:title="@string/report_bug"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rateUs"
        android:icon="@drawable/ic_rate_review_white_48dp"
        android:orderInCategory="100"
        android:visible="true"
        android:title="@string/rate_us"
        app:showAsAction="ifRoom" />
</menu>