<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_04"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_app_found_title"
        android:textColor="@color/warning_color"
        android:textSize="@dimen/_20"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_04"
        android:gravity="center"
        android:text="@string/no_app_found"
        android:textColor="@color/warning_color_text"
        android:textSize="@dimen/_14" />

    <ImageView
        android:id="@+id/close_dialog"
        android:layout_width="@dimen/_30"
        android:layout_height="@dimen/_30"
        android:layout_gravity="center"
        android:alpha="0.6"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_cancel_black_48dp" />
</LinearLayout>