<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        android:elevation="@dimen/_04"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="NewApi">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>
    </android.support.v7.widget.Toolbar>
    <!-- row 2 -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/app_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageHeaderIcon"
                android:layout_width="@dimen/_120"
                android:layout_height="@dimen/_120"
                android:layout_marginTop="@dimen/_10"
                android:layout_marginBottom="@dimen/_10"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/header" />

            <LinearLayout
                android:id="@+id/loadingPanel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/webViewLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200"
                android:orientation="vertical"
                android:visibility="gone">

                <WebView
                    android:id="@+id/webView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/footerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <TextView
                    android:layout_marginTop="@dimen/_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yathartha TV"
                    android:textAlignment="center"
                    android:textColor="@color/colorHeader"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textAlignment="center"
                    android:textColor="@color/colorHeader"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:id="@+id/addressLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:gravity="bottom"
                    android:layout_margin="@dimen/_10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/buttonPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="4"
                            tools:ignore="UselessParent">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:contentDescription="@string/mobile_text"
                                android:src="@drawable/mobile" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/_04"
                                android:layout_weight="3"
                                android:text="@string/phone"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/buttonEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="4"
                            tools:ignore="UselessParent">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:contentDescription="@string/mobile_text"
                                android:src="@drawable/mail" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/_04"
                                android:layout_weight="3"
                                android:text="@string/email"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <!-- col 1 -->
        </LinearLayout>

        <!-- row 2 end -->
    </LinearLayout>

</LinearLayout>
